[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
bytes = "*"
tokio-timer = "*"
tokio-stream = "*"
tokio-util = "0.7.3"
futures = "*"
futures-util = "*"
websocket-codec = "*"